[Issue #114] 모임 검색 로직 개선 1. 남은 정보 존재 여부 반환 2. 좋아요 여부 반환